--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -54,7 +54,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="25dp"
         android:ems="10"
-        android:hint="Birth date"
+        android:hint="@string/birth_date"
         android:onClick="openDatePicker"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
