Starting new custom activity adding

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
 
     <include
         android:id="@+id/fragmentHome"
-        layout="@layout/fragment_home" />
+        layout="@layout/fragment_home"
+        android:visibility="gone"/>
 
 
     <com.google.android.material.navigation.NavigationView
