--- a/app/src/main/res/layout/custom_activity_list_item.xml
+++ b/app/src/main/res/layout/custom_activity_list_item.xml
@@ -66,7 +66,7 @@
             app:icon="@android:drawable/ic_media_play"
             app:iconPadding="8dp"
             app:iconSize="25dp"
-            app:iconTint="@color/black"
+            app:iconTint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
