--- a/app/src/main/res/layout/fragment_add_custom_activity.xml
+++ b/app/src/main/res/layout/fragment_add_custom_activity.xml
@@ -22,6 +22,41 @@
                 android:layout_height="wrap_content"
                 android:text="@string/activity_name" />
 
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="16px"
+                android:text="@string/add_custom_name" />
+
+            <RadioGroup
+                android:id="@+id/selectActivityNameRadioGroup"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:checkedButton="@id/selectFixActivityOption">
+
+                <RadioButton
+                    android:id="@+id/selectFixActivityOption"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/fix_activities" />
+
+                <RadioButton
+                    android:id="@+id/selectCustomActivityOption"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/custom_activity" />
+            </RadioGroup>
+
+            <Spinner
+                android:id="@+id/selectFixActivitySpinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:entries="@array/fixActivities"
+                android:minHeight="48dp"
+                android:visibility="visible"
+                tools:visibility="visible" />
+
             <EditText
                 android:id="@+id/activityName"
                 android:layout_width="wrap_content"
@@ -29,7 +64,9 @@
                 android:ems="10"
                 android:hint="@string/name_of_activity"
                 android:inputType="textPersonName"
-                android:minHeight="48dp" />
+                android:minHeight="48dp"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/activityColorText"
@@ -82,9 +119,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="16dp"
-                android:text="@string/dates_type" />
+                android:text="@string/notification_type" />
 
             <RadioGroup
+                android:id="@+id/selectNotifTypeRadioGroup"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingLeft="16dp">
@@ -96,7 +134,7 @@
                     android:text="@string/has_deadline" />
 
                 <RadioButton
-                    android:id="@+id/acivityRegularity"
+                    android:id="@+id/activityRegularity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/regularity" />
@@ -114,6 +152,186 @@
                     android:text="@string/just_time_measure" />
             </RadioGroup>
 
+            <TextView
+                android:id="@+id/activityDeadlineText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:text="@string/deadline"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <EditText
+                android:id="@+id/activityDeadline"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:hint="@string/deadline"
+                android:minHeight="48dp"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/startDayText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:text="@string/custom_interval_from"
+                android:visibility="gone"
+                tools:visibility="visible"/>
+
+            <EditText
+                android:id="@+id/activityStartDay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:hint="@string/start_day"
+                android:minHeight="48dp"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/endDayText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:text="@string/custom_interval_to"
+                android:visibility="gone"
+                tools:visibility="visible"/>
+
+            <EditText
+                android:id="@+id/activityEndDay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:hint="@string/end_day"
+                android:minHeight="48dp"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/activityRegularityTypeText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:text="@string/dates_type"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <RadioGroup
+                android:id="@+id/selectExactRegularity"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingStart="16dp"
+                android:paddingEnd="0dp"
+                android:visibility="gone"
+                tools:visibility="visible">
+
+                <RadioButton
+                    android:id="@+id/activityDaily"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/daily" />
+
+                <RadioButton
+                    android:id="@+id/activityWeekly"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/weekly" />
+
+                <RadioButton
+                    android:id="@+id/activityMonthly"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/monthly" />
+            </RadioGroup>
+
+            <Switch
+                android:id="@+id/activityHasFixedWeeks"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="48dp"
+                android:paddingTop="16dp"
+                android:text="@string/has_fixed_days"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/activityWeeklyDays"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:text="@string/weekly_days"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <LinearLayout
+                android:id="@+id/allDaysOfWeek"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:visibility="gone"
+                tools:visibility="visible">
+
+                <CheckBox
+                    android:id="@+id/monday"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/monday"
+                    android:visibility="visible" />
+
+                <CheckBox
+                    android:id="@+id/tuesday"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tuesday"
+                    android:visibility="visible" />
+
+                <CheckBox
+                    android:id="@+id/wednesday"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/wednesday"
+                    android:visibility="visible" />
+
+                <CheckBox
+                    android:id="@+id/thursday"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/thursday"
+                    android:visibility="visible" />
+
+                <CheckBox
+                    android:id="@+id/friday"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/friday"
+                    android:visibility="visible" />
+
+                <CheckBox
+                    android:id="@+id/saturday"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/saturday"
+                    android:visibility="visible" />
+
+                <CheckBox
+                    android:id="@+id/sunday"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sunday"
+                    android:visibility="visible" />
+            </LinearLayout>
+
             <Switch
                 android:id="@+id/activityIsTimeMeasured"
                 style="@style/Theme.TomsSchedule"
@@ -122,9 +340,12 @@
                 android:minHeight="48dp"
                 android:paddingTop="16dp"
                 android:text="@string/is_time_measured"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:visibility="visible"
+                tools:visibility="visible" />
 
             <RadioGroup
+                android:id="@+id/selectDurationType"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingStart="16dp">
@@ -146,118 +367,32 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/custom_time" />
+
+                <RadioButton
+                    android:id="@+id/activityIsWeeklyTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/is_weekly_time" />
             </RadioGroup>
 
             <TextView
-                android:id="@+id/activityDeadlineText"
+                android:id="@+id/durationText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="16dp"
-                android:text="@string/deadline"
-                android:visibility="visible" />
+                android:text="Duration text..." />
 
-            <EditText
-                android:id="@+id/activityDeadline"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="false"
-                android:cursorVisible="false"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:hint="@string/deadline"
-                android:minHeight="48dp"
-                android:visibility="visible" />
-
-            <TextView
-                android:id="@+id/activityRegularityTypeText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="16dp"
-                android:text="@string/dates_type"
-                android:visibility="visible" />
-
-            <RadioGroup
+            <include android:id="@+id/activitySumTimePicker"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingStart="16dp"
-                android:paddingEnd="0dp"
-                android:visibility="visible">
+                layout="@layout/custom_time_picker"/>
 
-                <RadioButton
-                    android:id="@+id/activityDaily"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/daily" />
-
-                <RadioButton
-                    android:id="@+id/activityWeekly"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/weekly" />
-
-                <RadioButton
-                    android:id="@+id/activityMonthly"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/monthly" />
-            </RadioGroup>
-
-            <TextView
-                android:id="@+id/activityWeeklyDays"
+            <include
+                android:id="@+id/activityMondayPicker"
+                layout="@layout/custom_time_picker"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="16dp"
-                android:text="@string/weekly_days"
-                android:visibility="visible" />
+                android:layout_height="match_parent" />
 
-            <RadioButton
-                android:id="@+id/monday"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/monday"
-                android:visibility="visible" />
-
-            <RadioButton
-                android:id="@+id/tuesday"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/tuesday"
-                android:visibility="visible" />
-
-            <RadioButton
-                android:id="@+id/wednesday"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/wednesday"
-                android:visibility="visible" />
-
-            <RadioButton
-                android:id="@+id/thursday"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/thursday"
-                android:visibility="visible" />
-
-            <RadioButton
-                android:id="@+id/friday"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/friday"
-                android:visibility="visible" />
-
-            <RadioButton
-                android:id="@+id/saturday"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/saturday"
-                android:visibility="visible" />
-
-            <RadioButton
-                android:id="@+id/sunday"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/sunday"
-                android:visibility="visible" />
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
