--- a/app/src/main/res/layout/custom_time_picker.xml
+++ b/app/src/main/res/layout/custom_time_picker.xml
@@ -66,7 +66,8 @@
             android:layout_height="wrap_content"
             android:layout_weight=".05"
             android:text=":"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/hours"
@@ -84,7 +85,8 @@
             android:layout_weight=".05"
             android:text=":"
             android:textAlignment="center"
-            android:textAllCaps="false" />
+            android:textAllCaps="false"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/minutes"
