--- a/app/src/main/res/layout/fragment_add_custom_activity.xml
+++ b/app/src/main/res/layout/fragment_add_custom_activity.xml
@@ -333,6 +333,29 @@
             </LinearLayout>
 
             <Switch
+                android:id="@+id/activityHasAnEndDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="48dp"
+                android:paddingTop="16dp"
+                android:text="@string/has_an_end_date"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <EditText
+                android:id="@+id/activityEndDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:hint="@string/end_date"
+                android:minHeight="48dp"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <Switch
                 android:id="@+id/activityIsTimeMeasured"
                 style="@style/Theme.TomsSchedule"
                 android:layout_width="match_parent"
@@ -348,7 +371,9 @@
                 android:id="@+id/selectDurationType"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingStart="16dp">
+                android:paddingStart="16dp"
+                android:visibility="gone"
+                tools:visibility="visible">
 
                 <RadioButton
                     android:id="@+id/activityIsSumTime"
@@ -380,18 +405,137 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="16dp"
-                android:text="Duration text..." />
-
-            <include android:id="@+id/activitySumTimePicker"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                layout="@layout/custom_time_picker"/>
+                android:text="Duration text..."
+                android:visibility="gone"
+                tools:visibility="visible" />
 
             <include
-                android:id="@+id/activityMondayPicker"
+                android:id="@+id/activitySumTimePicker"
                 layout="@layout/custom_time_picker"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:visibility="gone"
+                tools:visibility="visible">
+
+                <TextView
+                    android:id="@+id/activityFixedDayTimeEachDayText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="16dp"
+                    android:text="@string/select_fixed_days_times" />
+
+                <TextView
+                    android:id="@+id/activityMondayText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="16dp"
+                    android:paddingTop="16dp"
+                    android:text="@string/monday"
+                    android:textStyle="italic" />
+
+                <include
+                    android:id="@+id/activityMondayPicker"
+                    layout="@layout/custom_time_picker_for_one_day"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                <TextView
+                    android:id="@+id/activityTuesdayText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="16dp"
+                    android:paddingTop="16dp"
+                    android:text="@string/tuesday"
+                    android:textStyle="italic" />
+
+                <include
+                    android:id="@+id/activityTuesdayPicker"
+                    layout="@layout/custom_time_picker_for_one_day"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                <TextView
+                    android:id="@+id/activityWednesdayText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="16dp"
+                    android:paddingTop="16dp"
+                    android:text="@string/wednesday"
+                    android:textStyle="italic" />
+
+                <include
+                    android:id="@+id/activityWednesdayPicker"
+                    layout="@layout/custom_time_picker_for_one_day"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                <TextView
+                    android:id="@+id/activityThursdayText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="16dp"
+                    android:paddingTop="16dp"
+                    android:text="@string/thursday"
+                    android:textStyle="italic" />
+
+                <include
+                    android:id="@+id/activityThursdayPicker"
+                    layout="@layout/custom_time_picker_for_one_day"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                <TextView
+                    android:id="@+id/activityFridayText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="16dp"
+                    android:paddingTop="16dp"
+                    android:text="@string/friday"
+                    android:textStyle="italic" />
+
+                <include
+                    android:id="@+id/activityFridayPicker"
+                    layout="@layout/custom_time_picker_for_one_day"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                <TextView
+                    android:id="@+id/activitySaturdayText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="16dp"
+                    android:paddingTop="16dp"
+                    android:text="@string/saturday"
+                    android:textStyle="italic" />
+
+                <include
+                    android:id="@+id/activitySaturdayPicker"
+                    layout="@layout/custom_time_picker_for_one_day"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                <TextView
+                    android:id="@+id/activitySundayText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="16dp"
+                    android:paddingTop="16dp"
+                    android:text="@string/sunday"
+                    android:textStyle="italic" />
+
+                <include
+                    android:id="@+id/activitySundayPicker"
+                    layout="@layout/custom_time_picker_for_one_day"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
