--- a/app/src/main/res/layout/custom_activity_list_item.xml
+++ b/app/src/main/res/layout/custom_activity_list_item.xml
@@ -63,7 +63,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             app:cornerRadius="30dp"
-            app:icon="@android:drawable/ic_media_play"
+            app:icon="@drawable/ic_baseline_play_arrow_24"
             app:iconPadding="8dp"
             app:iconSize="25dp"
             app:iconTint="@color/white"
