--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -10,15 +10,15 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="120dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:fitsSystemWindows="true"
             app:toolbarId="@+id/toolbar">
 
             <androidx.appcompat.widget.Toolbar
@@ -34,6 +34,7 @@
                 android:layout_height="wrap_content"
                 android:paddingStart="16dp"
                 android:paddingTop="16dp"
+                android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -61,16 +62,15 @@
                     android:id="@+id/detailNoteText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="16dp"
+                    android:paddingTop="24dp"
                     android:text="@string/note_detail"
-                    android:textStyle="italic"
-                    android:visibility="gone"
-                    tools:visibility="visible" />
+                    android:textStyle="italic" />
 
                 <TextView
                     android:id="@+id/detailNote"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:textSize="16sp" />
 
                 <TextView
@@ -89,16 +89,22 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textView23"
+                    android:id="@+id/detailRegularityText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:paddingTop="16dp"
+                    android:text="@string/regularity_detail"
+                    android:textStyle="italic"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
 
                 <TextView
-                    android:id="@+id/textView24"
+                    android:id="@+id/detailRegularity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:textColor="@color/black"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
 
                 <TextView
                     android:id="@+id/detailDeadlineText"
@@ -114,6 +120,7 @@
                     android:id="@+id/detailDeadline"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:visibility="gone"
                     tools:visibility="visible" />
 
@@ -123,12 +130,17 @@
                     android:layout_height="wrap_content"
                     android:paddingTop="16dp"
                     android:text="Duration text"
-                    android:textStyle="italic" />
+                    android:textStyle="italic"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
 
                 <TextView
                     android:id="@+id/deadlineDuration"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
 
                 <Switch
                     android:id="@+id/switch1"
