--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -51,5 +51,27 @@
             android:name="item_id"
             android:defaultValue="0L"
             app:argType="long" />
+        <action
+            android:id="@+id/action_detailFragment_to_nav_home"
+            app:destination="@id/nav_home" />
+        <action
+            android:id="@+id/action_detailFragment_to_editActivityFragment"
+            app:destination="@id/editActivityFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/editActivityFragment"
+        android:name="hu.janny.tomsschedule.ui.main.editactivity.EditActivityFragment"
+        android:label="fragment_edit_activity"
+        tools:layout="@layout/fragment_edit_activity" >
+        <argument
+            android:name="item_id"
+            app:argType="long"
+            android:defaultValue="0L" />
+        <action
+            android:id="@+id/action_editActivityFragment_to_nav_home"
+            app:destination="@id/nav_home" />
+        <action
+            android:id="@+id/action_editActivityFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
     </fragment>
 </navigation>
