Activities' notifiaction on home fragment

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -82,5 +82,9 @@
             android:name="item_id"
             android:defaultValue="0L"
             app:argType="long" />
+        <argument
+            android:name="today_so_far"
+            app:argType="long"
+            android:defaultValue="0L" />
     </fragment>
 </navigation>
