--- a/app/src/main/res/layout/fragment_personal_filter.xml
+++ b/app/src/main/res/layout/fragment_personal_filter.xml
@@ -3,17 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.statistics.PersonalStatisticsFragment">
+    tools:context=".ui.main.statistics.PersonalFilterFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
