--- a/app/src/main/res/layout/fragment_personal_filter.xml
+++ b/app/src/main/res/layout/fragment_personal_filter.xml
@@ -1,14 +1,224 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/frameLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.main.statistics.PersonalFilterFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="16dp">
+
+            <TextView
+                android:id="@+id/pPeriodText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/select_time_period_chip"
+                android:textSize="16sp"
+                android:textStyle="italic" />
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/pPeriodChipGroup"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="16dp"
+                app:checkedChip="@id/pTodayChip"
+                app:selectionRequired="true"
+                app:singleSelection="true">
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/pTodayChip"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/today_chip"
+                    app:chipBackgroundColor="@color/toms_100"
+                    app:rippleColor="@color/toms_400" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/pYesterdayChip"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/yesterday_chip"
+                    app:chipBackgroundColor="@color/toms_100"
+                    app:rippleColor="@color/toms_400" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/pThreeDaysChip"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/three_days_chip"
+                    app:chipBackgroundColor="@color/toms_100"
+                    app:rippleColor="@color/toms_400" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/pWeekChip"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/week_chip"
+                    app:chipBackgroundColor="@color/toms_100"
+                    app:rippleColor="@color/toms_400" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/pTwoWeeksChip"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/two_week_chip"
+                    app:chipBackgroundColor="@color/toms_100"
+                    app:rippleColor="@color/toms_400" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/pMonthChip"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/month_chip"
+                    app:chipBackgroundColor="@color/toms_100"
+                    app:rippleColor="@color/toms_400" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/pThreeMonthsChip"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/three_months_chip"
+                    app:chipBackgroundColor="@color/toms_100"
+                    app:rippleColor="@color/toms_400" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/pCustomDayChip"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/select_custom_day"
+                    app:chipBackgroundColor="@color/toms_100"
+                    app:rippleColor="@color/toms_400" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/pFromToChip"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/select_custom_from_to"
+                    app:chipBackgroundColor="@color/toms_100"
+                    app:rippleColor="@color/toms_400" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/pAllChip"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/all_time_chip"
+                    app:chipBackgroundColor="@color/toms_100"
+                    app:rippleColor="@color/toms_400" />
+
+            </com.google.android.material.chip.ChipGroup>
+
+            <EditText
+                android:id="@+id/pCustomDay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:hint="@string/date_hint"
+                android:minHeight="48dp"
+                android:paddingTop="16dp"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/pFromText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:text="@string/from_day"
+                android:textStyle="italic"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <EditText
+                android:id="@+id/pFromDay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:hint="@string/date_hint"
+                android:minHeight="48dp"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/pToText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:text="@string/to_day"
+                android:textStyle="italic"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <EditText
+                android:id="@+id/pToDay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:hint="@string/date_hint"
+                android:minHeight="48dp"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/pActivityText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:text="@string/select_activity_chip"
+                android:textSize="16sp"
+                android:textStyle="italic" />
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/pActivityChipGroup"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp">
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/pAllActivityChip"
+                    style="@style/Widget.MaterialComponents.Chip.Filter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/all_activity_chip" />
+            </com.google.android.material.chip.ChipGroup>
+
+            <Button
+                android:id="@+id/pFilterButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="4dp"
+                android:text="@string/filter"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
