--- a/app/src/main/res/layout/personal_detail_layout.xml
+++ b/app/src/main/res/layout/personal_detail_layout.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -16,7 +17,7 @@
             android:paddingVertical="16dp">
 
             <TextView
-                android:id="@+id/textView9"
+                android:id="@+id/pPeriodText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/select_time_period_chip"
@@ -28,61 +29,74 @@
                 android:layout_height="match_parent"
                 app:singleSelection="true"
                 app:selectionRequired="true"
-                app:checkedChip="@id/chip4"
+                app:checkedChip="@id/pTodayChip"
                 android:paddingTop="16dp">
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/chip4"
+                    android:id="@+id/pTodayChip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/today_chip" />
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/chip5"
+                    android:id="@+id/pYesterdayChip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/yesterday_chip" />
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/chip11"
+                    android:id="@+id/pThreeDaysChip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/three_days_chip" />
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/chip6"
+                    android:id="@+id/pWeekChip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/week_chip" />
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/chip7"
+                    android:id="@+id/pTwoWeeksChip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/two_week_chip" />
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/chip8"
+                    android:id="@+id/pMonthChip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/month_chip" />
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/chip9"
+                    android:id="@+id/pThreeMonthsChip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/three_months_chip" />
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/chip10"
+                    android:id="@+id/pAllChip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/all_time_chip" />
 
             </com.google.android.material.chip.ChipGroup>
 
+            <EditText
+                android:id="@+id/activityStartDay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:hint="@string/start_day"
+                android:minHeight="48dp"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
             <TextView
-                android:id="@+id/textView12"
+                android:id="@+id/pActivityText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="16dp"
@@ -96,7 +110,7 @@
                 android:paddingTop="16dp">
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/chip12"
+                    android:id="@+id/pAllActivityChip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/all_activity_chip" />
