--- a/app/src/main/res/layout/chip_layout.xml
+++ b/app/src/main/res/layout/chip_layout.xml
@@ -3,6 +3,7 @@
     style="@style/Widget.MaterialComponents.Chip.Filter"
     android:layout_width="wrap_content"
     android:textColor="@color/black"
+    android:textSize="16dp"
     android:layout_height="wrap_content">
 
 </com.google.android.material.chip.Chip>
