--- a/app/src/main/res/layout/fragment_personal_statistics.xml
+++ b/app/src/main/res/layout/fragment_personal_statistics.xml
@@ -28,6 +28,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:text="@string/filter"
+                android:textSize="16sp"
+                android:textStyle="bold"
                 app:icon="@drawable/ic_tune" />
 
             <TextView
@@ -39,6 +41,27 @@
                 android:text="@string/please_filter"
                 android:textAlignment="center"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/timeSpentText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/time_spent"
+                android:textSize="16sp"
+                android:textStyle="italic"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/timeSpent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
             <com.github.mikephil.charting.charts.BarChart
                 android:id="@+id/allBarChart"
